# wx_clang_cmake_template

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: Info.plist  main.cpp
